# GCPDS-trabajos

./: .gitignore  README.md  cs8_hdd.py  notes_21-08-25.md
ANE1/: Makefile  TDT_CHANNELS.csv  extraer_datos_csv.py  main_welch_test.c  probar_csv_to_tdt_mod.c  psd_output.csv  test_welch_cs8.ipynb
ANE1/Noise-Estimation/: ITU-Noise-investigation.ipynb  adaptive_threshold_tdt.py
ANE1/src/: cs8_to_iq.c  cs8_to_iq.h  csv_to_tdt_mod.c  csv_to_tdt_mod.h  welch.c  welch.h
ANE2/API-rest-test/: main.py
ANE2/Audio/: AudioARNN02.ipynb  test-torch.py
ANE2/Audios-AR/: Como-hacer-LARNN.md  Performance_Reading_Audio_Files.ipynb  audiotcn-hpo.py
ANE2/Audios-AR/C-AR-models/: c-psd-estimator  main.c
ANE2/Audios-AR/format-files/: Etiquetado_audios.xlsx  audioARN.py
ANE2/Autocorr-fft/: autocorr_c.c  test_autocorr1.ipynb  test_autocorr2.ipynb
ANE2/C-psd-estimation/: periodogram-estimation.ipynb  welch-estimation.ipynb
ANE2/PSD-Estimation-final/: c-psd-estimator  requirements.txt
ANE2/anova/: ANOVA-script-v2.py
ANE2/api-handler/: .gitignore  main.py  requirements.txt
ANE2/api-handler/Modules/: status_rpi.py
ANE2/backend-dll/: main.py
ANE2/contab-backend/: requirements.txt
ANE2/crontab-BE/: requirements.txt
ANE2/ctype_dll-BE/: notes.md
ANE2/hackrf_driver/: CMakeLists.txt  c-psd-estimator  driver-hackrf.py  main.c  plot-c-output.py
ANE2/hackrf_driver/Modules/: datatypes.h  psd-estimators.c  psd-estimators.h  utils.c  utils.h
ANE2/hackrf_driver/Samples/: output.csv
ANE2/hackrf_driver/docs/: c_program_notes.excalidraw
ANE2/matlab-example-n9000b/: DeepCaptureGUI.fig  DeepCaptureGUI.m  deepCapture.m  generateMATLABLogo.m
ANE2/my-fastapi-app/: .gitignore  CMakeLists.txt  build.sh  client.c  main.py
ANE2/my-fastapi-app/Drivers/: bacn_RF.c  bacn_RF.h
ANE2/performance-rpi5/: performance-rpi.py
ANE2/rpi-backend-socketV0.0.0/: build-processing.sh  main.py
ANE2/rpi-backend-timers-shared-librariesV0.0.1/: requirements.txt
ANE2/sdr-RxTx/: hackrf_realtime_plotter.py
ANE2/snr-scripts/: m2m4_snr_IQ.ipynb
ANE2/socket-BE/test-socket/: CMakeLists.txt  build-processing.sh
Audios-AR/: AR-characteristic-extraction-2.ipynb  AR-characteristic-extraction.ipynb  LARNN1.ipynb  audiotcn-hpo.py  audiotcn-test.py  audiotcn.py  audiotcn2.ipynb  autoencoder.py  gpu-test.py  model.excalidraw  requirements.txt
Audios-AR/C-AR-models/: CMakeLists.txt
Audios-AR/format-files/: AUDIOARNN.py
Audios-AR/tcn-reconstruct/: tcn-perform-hpo.py  tcn-perform.py
C-final-acquisition/: test.py
C-final-acquisition/LTE-GPS-Mux-PSD/: CMakeLists.txt  example_demod.c  main  main.c  plot.py  psd_results.csv  test_capture
C-final-acquisition/json/: POST-data.jsonc
C-final-acquisition/kosmogorov/: main.py  rf_validation_metrics.py
German-scripts/: 01e2PSDHistStat.ipynb  C01cPSDHistPytorch_(1) (1).ipynb
LTE-MUX/: Makefile  gps_antenna.py
LTE-MUX/Drivers/: bacn_api.c  bacn_api.h
Mamitas/: README.md  notes.excalidraw  test-simpleitk.py
Mamitas/kivy-app-test/: requirements.txt  test.py
Mamitas/mamitas-expo-app/: app.json  investigation.md  package-lock.json  package.json
Yolo/Apuntes/: Methods-used.md
cs8-to-csv/: .gitignore  cs8_hdd.py
cs8-to-jsongz/: cs8_hdd.py  exec-cs8-welch.py  exec_welch_jsogngz.py
german-test-splitter/: acquire-spectrum-trace-from-N9000B.py  auto.py  server.py
german-test-splitter/json/: GET-realtime.jsonc
german-test-splitter/utils/: request_util.py  welch_util.py
r4-hackrf-parametrization/: anova-devices.py  plot-spectrum.py
test-ANE2/: client.py  main.py  pltcsv.py  requirements.txt  server.py  test.py
test-ANE2/json/: GET-realtime.jsonc  POST-data.jsonc
test-ANE2/sensor_captures/: 2025-11-25_19-25-16_88000000_108000000.csv
testing-frontend-plot/c-program/: berni.c  example_hack.c  main  main.c  parser_json_done.c  plot.py  psd_results.csv  psd_welch_hackrf_exec.py  request.py  scales.c  server.py  zmqsub.py
welch-ane2/: State_0000.state  Trace_0000.csv  USRP_Tx.py  USRP_Tx_cli.py  USRP_noise_floor.py  acquire-IQ-from-N9000B  acquire-IQ-from-N9000B.py  analyzer-plotting.py  animation_plot_example.py  hackrf_Rx.py  main.py  n9000b-HackRF-Samples.py  n9000b-SNR.ipynb  n9000b-SNR.py  n9000b-first-connect.py  requirements.txt  spectrum_trace.csv  synthetic-spectrum.py  uhd-transmit.py
welch-ane2/PSD Estimation/: WelchEstimation.ipynb
welch-ane2/PSD-Estimation-final/: CMakeLists.txt  build.sh  c-psd-estimator  main.c  periodogram-estimation.ipynb  psd-estimation-final.ipynb  welch-estimation.ipynb
welch-ane2/PSD-Estimation-final/Modules/: psd-estimators.c  psd-estimators.h  utils.c  utils.h
welch-ane2/PSD-Estimation-final/exchange/: psd_output_C.csv
welch-ane2/libs/: methods-scratch.py
welch-ane2/matlab-example-n9000b/: listACEVISAAddresses.m
welch-ane2/n9000b scripts/: acquire-spectrum-trace-from-N9000B.py
welch-ane2/performance-rpi5/: performance-rpi.py
welch-ane2/snr-scripts/: m2m4_snr_IQ_estimate.py  n9000b-SNR.ipynb
(+117 files in other folders)
